--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <java.version>11</java.version>
         <springdocOpenapiUi.version>1.6.11</springdocOpenapiUi.version>
+        <testcontainersPostgreSQL.version>1.17.3</testcontainersPostgreSQL.version>
     </properties>
 
     <dependencies>
@@ -50,6 +51,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${testcontainersPostgreSQL.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
