--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <java.version>11</java.version>
         <springdocOpenapiUi.version>1.6.11</springdocOpenapiUi.version>
         <testcontainersPostgreSQL.version>1.17.3</testcontainersPostgreSQL.version>
+        <lombok.version>1.18.24</lombok.version>
     </properties>
 
     <dependencies>
@@ -47,6 +48,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
