--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <springdocOpenapiUi.version>1.6.11</springdocOpenapiUi.version>
         <testcontainersPostgreSQL.version>1.17.3</testcontainersPostgreSQL.version>
         <lombok.version>1.18.24</lombok.version>
+        <modelmapper.version>3.1.0</modelmapper.version>
     </properties>
 
     <dependencies>
@@ -54,6 +55,11 @@
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>${modelmapper.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
