--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -4,11 +4,19 @@
     <parent>
         <artifactId>insurance</artifactId>
         <groupId>com.s0qva</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>domain</artifactId>
     <name>domain</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.s0qva</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
