--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
     <groupId>com.s0qva</groupId>
     <artifactId>insurance</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>insurance</name>
     <description>insurance</description>
     <packaging>pom</packaging>
