--- a/api/pom.xml
+++ b/api/pom.xml
@@ -8,19 +8,15 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>core</artifactId>
-    <name>core</name>
+    <artifactId>api</artifactId>
+    <name>api</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
+            <groupId>com.s0qva</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
